[project]
name = "comfyui-cyberdelia-metadata"
description = "Image metadata extension for ComfyUI. Adds Civitai-compatible metadata to saved PNG/JPG/WebP images, with broad third-party node support. By Cyberdelia AI Lab — successor to revived_comfyui_image_metadata_extension."
version = "1.0.8"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/cyberdeliaAI/comfyui-cyberdelia-metadata"

[tool.comfy]
PublisherId = "cyberdelia"
DisplayName = "Cyberdelia Image Metadata"
Icon = "https://raw.githubusercontent.com/cyberdeliaAI/comfyui-cyberdelia-metadata/main/assets/icon.png"
